--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: go
-
-go:
-    - "1.15"
-
-script:
-    - ./demo.sh
+matrix:
+    include:
+    -   language: go
+        go:
+            - "1.15"
+        script:
+            - ./demo.sh
