--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -20,3 +20,29 @@ jobs:
 
     - name: Demo
       run: ./demo.sh
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '>=1.20'
+
+    - name: Demo
+      run: demo.bat
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '>=1.20'
+
+    - name: Demo
+      run: ./demo.sh
