--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,7 +32,7 @@ jobs:
         go-version: '>=1.20'
 
     - name: Demo
-      run: demo.bat
+      run: .\demo.bat
 
   build-macos:
     runs-on: macos-latest
